--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/adarshhbnair/CRUD-Authentication#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "express": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "path": "^0.12.7"
   }
 }
